--- a/views/index.pug
+++ b/views/index.pug
@@ -1,2 +1,9 @@
-head 
-    title = titlePage
+html(lang='en')
+    head 
+        title = pageTitle
+        link(rel="stylesheet", href="style.css")
+        script(
+            type:'text/javascript'
+            src:script.js 
+            defer
+        ) 
