--- a/views/index.pug
+++ b/views/index.pug
@@ -7,10 +7,20 @@ html(lang='en')
             src:script.js 
             defer
         ) 
-    body 
+    body
+        header 
+            ul 
+                li 
+                    a(href="#") link1 
+                li 
+                    a(href="#") link2   
         h1=pageHeader
         div
             if isauthenticated 
                 p.author user granted access 
             else 
                 p.unauthor user unauthorized
+        footer 
+            p copyright 2022
+            p nodeclass 2022
+        
