--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -2,6 +2,12 @@ html(lang='en')
     head 
         title=pageTitle
         link(rel="stylesheet", href="style.css")
+        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' 
+        rel='stylesheet' 
+        integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' 
+        crossorigin='anonymous')
+        img(src='.assets/assets/Panini-150x150.jpg' width='100' height='100' alt='')
+
         script(
             type:'text/javascript'
             src:script.js 
@@ -10,7 +16,9 @@ html(lang='en')
     body
         header
             ul
-                li
-                    a(href="#") link1
-                li 
-                    a(href="#") link2
+                li#myid.li-class
+                    a(href='/') Home
+                li#myid.li-class 
+                    a(href="#") Register With Us
+                li#myid.li-class 
+                    a(href='#') Order/manu
