--- a/views/restaurDemo/html.pug
+++ b/views/restaurDemo/html.pug
@@ -1,6 +1,6 @@
 h1=pageHeader 
 div#bg
     if isauthenticated 
-        p.author| user granted access 
+        p.author| Gourmet Italian Grilled Sandwiches ... Gourmet Italian Grilled Sandwiches ...Gourmet Italian Grilled Sandwiches ... Gourmet Italian Grilled Sandwiches ... Gourmet Italian Grilled Sandwiches
     else
-        p.unathor user unauthorized
+        p.unathor NOT ATHENTICATED
