--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -19,6 +19,13 @@ html(lang='en')
                 li#myid.li-class
                     a(href='/') Home
                 li#myid.li-class 
-                    a(href="#") Register With Us
+                    a(href="#") Register Now
                 li#myid.li-class 
                     a(href='#') Order/manu
+    hr#c
+    h1=pageHeader
+    div#bg
+    p.author| Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta
+
+
+    
