fixing login problem github showing login and latest update showing register

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -6,7 +6,7 @@ html(lang='en')
         rel='stylesheet' 
         integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' 
         crossorigin='anonymous')
-        img(src='.assets/assets/Panini-150x150.jpg' width='100' height='100' alt='')
+        img(src='assets/Panini-150x150.jpg' width='100' height='100' alt='')
 
         script(
             type:'text/javascript'
@@ -17,9 +17,9 @@ html(lang='en')
         header
             ul
                 li#myid.li-class
-                    a(href='/') Home
+                    a(href='demo') Home
                 li#myid.li-class 
-                    a(href="#") Register Now
+                    a(href="/register") Register Now
                 li#myid.li-class 
                     a(href='#') Order/manu
     hr#c
@@ -28,4 +28,3 @@ html(lang='en')
     p.author| Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta
 
 
-    
