fixing form problem

--- a/views/register/htm.pug
+++ b/views/register/htm.pug
@@ -1,5 +1,5 @@
 .container.col-8
-    form(action ="/login",method='POST')
+    form(action ="/register",method='POST')
         label.form-label(for = "user-name") Name:
         input#user-name.form-control(type="text",name='name' placeholder='Full Name')
         label.form-label(for = "mobile-number") Mobile Number:
