added route to Registration page

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -17,7 +17,7 @@ html(lang='en')
         header
             ul
                 li#myid.li-class
-                    a(href='demo') Home
+                    a(href='Home') Home
                 li#myid.li-class 
                     a(href="/register") Register Now
                 li#myid.li-class 
