--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -22,7 +22,7 @@ html(lang='en')
                     a(href="/register") Register Now
                 li#myid.li-class 
                     a(href='#') Order/manu
-    hr#c
+    hr.line-class
     h1=pageHeader
     div#bg
     p.author| Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta --- Panini and Pasta
