--- a/views/restaurDemo/html.pug
+++ b/views/restaurDemo/html.pug
@@ -1,4 +1,8 @@
 .container
+  //h1.heading
+    | Image Gallery with CSS Grid 
+    span &amp; Flexbox Fallback 
+    
   .gallery
     .gallery-item
       img.gallery-image(src='https://images.unsplash.com/photo-1488190211105-8b0e65b80b4e?w=500&h=500&fit=crop' alt='person writing in a notebook beside by an iPad, laptop, printed photos, spectacles, and a cup of coffee on a saucer')
