--- a/public/style.css
+++ b/public/style.css
@@ -141,7 +141,7 @@ The following rule will only run if your browser supports CSS grid.
 Remove or comment-out the code block below to see how the browser will fall-back to flexbox styling. 
 
 */
-
+/*
 @supports (display: grid) {
   .gallery {
     display: grid;
@@ -154,3 +154,4 @@ Remove or comment-out the code block below to see how the browser will fall-back
     margin: 0;
   }
 }
+*/
