picture size corrected

--- a/views/restaurDemo/html.pug
+++ b/views/restaurDemo/html.pug
@@ -11,8 +11,9 @@
     .gallery-item
       img.gallery-image(src='assets/TANDOORI.jpg' alt='Tandoori')
     .gallery-item
-      img.gallery-image(src='assets/Basil Pesto 80x80.jpg' alt='Basil')
+      img.gallery-image(src='assets/TUNA.jpg' alt='Tuna')
     .gallery-item
       img.gallery-image(src='assets/SPICY WEDGES.jpeg' alt='Spicy Wedges')
     .gallery-item
-      img.gallery-image(src='assets/TUNA.jpg' alt='Tuna')
+      img.gallery-image(src='assets/ROASTO 2.jpg' alt='Rosto')
+    
